--- a/style.css
+++ b/style.css
@@ -4,10 +4,9 @@ body{
 
 header{
     width: 100%;
-    height: 8vh;
-    background-color: antiquewhite;
+    height: 7vh;
+    background-color: rgb(58, 57, 104);
 }
-
 
 #no-texto{
     width: 340px;
@@ -18,7 +17,7 @@ main{
     width: 100%;
     height: 80vh;
     display: flex;
-    justify-content: space-between;
+    background-color: rgb(58, 57, 104);
 }
 
 #logo-alura{
@@ -35,43 +34,84 @@ section{
 
 #ingreso-texto{
     width: 100%;
-    height: 90%;
-    background-color: rgb(46, 45, 83);
+    height: 80%;
+    background-color: rgb(58, 57, 104);
+    border: none;
+}
+
+#aviso{
+    padding: 8px;
+    text-align: center;
 }
 
 .bloque-izquierdo{
-    width: 65%;
+    width: 70%;
+    /* background-color: aqua; */
+
 }
 
 #ingreso-texto{
-    width: 75%;
+    width: 65%;
     height: 80%;
+    resize: none;
+    display: block;
+    margin: auto;
+    margin-top: 40px;
+    font-size: 4vh;
+    outline: none;
+}
+
+.div-botones{
+    text-align: center;
+}
+
+.boton{
+    margin: 10px;
+    width: 20%;
+    height: 30%;
 }
 
 .bloque-derecho{
     width: 25%;
+    background-color: rgb(114, 113, 151);
+    border-radius: 22px;
 }
 
 #imagen-sin-texto{
     width: 100%;
     height: 60%;
-    padding: 16px 0 0 0;
+    padding: 60px 0 0 0;
     box-sizing: border-box;
+    align-items: center;
+}
+
+#no-texto{
+    align-items: center;
+    display: block;
+    margin: auto;
 }
 
 #div-h3{
     width: 100%;
     height: 20%;
     text-align: center;
+    font-size: 4vh;
 }
 
-#div-p{
+p{
     width: 100%;
-    height: 20%;
+    height: 10%;
     text-align: center;
+    font-size: 2.2vh;
+}
+
+.blanco{
+    color: bisque;   
 }
 
 footer{
     width: 100%;
     height: 7vh;
+    background-color: rgb(58, 57, 104);
+
 }
